Fix CSV tests